Fixed image rendering on iPhone 6
- Fixed media queries for iPhone 6 by adding a portrait one and setting the max height and width accordingly

--- a/src/css/pages/sparx.css
+++ b/src/css/pages/sparx.css
@@ -185,10 +185,18 @@ nav .nav-wrapper i:focus {
 /* ----------- iPhone 6 ----------- */
 /* ----------- Galaxy S4 ----------- */
 /* ----------- Galaxy S3 ----------- */
+/* Portrait */
+
+@media only screen and (min-device-width : 375px) and (max-device-width : 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation : portrait) {
+    .bio-image {
+        max-height: 100%;
+    }
+}
 /* Landscape */
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
     .bio-image {
+        max-height: 80%;
         max-width: 80%;
     }
     .tag-lines {
